src/test/deca/context/invalid/while-exprNotDeclared.context
while-exprNotDeclared.deca:2: